Small bug fix for padding on small screens

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   width: 100%;
   margin-top: auto;
 }
@@ -60,6 +59,7 @@ footer p {
   text-align: center;
   font-size: 20px;
   color: #83007c;
+  padding: 10px;
 }
 
 .github-link i {
@@ -111,5 +111,6 @@ footer p {
 @media screen and (max-width: 376px) {
   .button-grid {
     grid-template-columns: repeat(1, 1fr);
+    padding: 10px 0;
   }
 }
